--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -16,6 +16,9 @@ if(NOT ANDROID AND NOT IOS)
     add_subdirectory(enttecwing)
     add_subdirectory(hid)
     add_subdirectory(os2l)
+    add_subdirectory(spi)
+#    add_subdirectory(uart)
+#    add_subdirectory(gpio)
 endif()
 
 pkg_check_modules(LIBOLA IMPORTED_TARGET libola)
@@ -27,6 +30,3 @@ endif()
 if(UNIX AND NOT ANDROID AND NOT IOS AND NOT MACOS)
     add_subdirectory(dmx4linux)
 endif()
-
-#add_subdirectory(uart)
-#add_subdirectory(spi)
