--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,7 +7,11 @@ add_subdirectory(artnet)
 add_subdirectory(E1.31)
 add_subdirectory(loopback)
 add_subdirectory(osc)
+
 if(NOT ANDROID AND NOT IOS)
+    pkg_check_modules(LIBOLA IMPORTED_TARGET libola)
+    pkg_check_modules(LIBOLASERVER IMPORTED_TARGET libolaserver)
+
     add_subdirectory(dmxusb)
     add_subdirectory(peperoni)
     add_subdirectory(udmx)
@@ -16,17 +20,16 @@ if(NOT ANDROID AND NOT IOS)
     add_subdirectory(enttecwing)
     add_subdirectory(hid)
     add_subdirectory(os2l)
-    add_subdirectory(spi)
-#    add_subdirectory(uart)
-#    add_subdirectory(gpio)
+if(UNIX AND NOT MACOS)
+    add_subdirectory(dmx4linux)
 endif()
-
-pkg_check_modules(LIBOLA IMPORTED_TARGET libola)
-pkg_check_modules(LIBOLASERVER IMPORTED_TARGET libolaserver)
-
-if((((NOT ANDROID AND NOT IOS) AND (UNIX) AND (${LIBOLA_FOUND}) AND (${LIBOLASERVER_FOUND}))))
+if (NOT WIN32 AND NOT APPLE)
+    add_subdirectory(spi)
+endif()
+if(UNIX AND ${LIBOLA_FOUND} AND ${LIBOLASERVER_FOUND})
     add_subdirectory(ola)
 endif()
-if(UNIX AND NOT ANDROID AND NOT IOS AND NOT MACOS)
-    add_subdirectory(dmx4linux)
+
+#    add_subdirectory(uart)
+#    add_subdirectory(gpio)
 endif()
