cmake: fix platform detection on macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 SET(INSTALL_ROOT "/" CACHE STRING "Installation root directory")
 
 if(UNIX)
-    if (MACOS)
+    if (APPLE)
         set(iokit ON)
     else()
         set(udev ON)
@@ -42,7 +42,7 @@ find_package(PkgConfig REQUIRED)
 include(./variables.cmake)
 include(./coverage.cmake)
 
-if((((QT_VERSION_MAJOR LESS 5)) AND (MACOS)))
+if((((QT_VERSION_MAJOR LESS 5)) AND (APPLE)))
     pkg_check_modules(PORTAUDIO_2 IMPORTED_TARGET portaudio-2.0)
 endif()
 
@@ -65,7 +65,7 @@ else()
     add_subdirectory(main)
     add_subdirectory(fixtureeditor)
 endif()
-if(MACOS AND NOT qmlui)
+if(APPLE AND NOT qmlui)
     add_subdirectory(launcher)
 endif()
 
