--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -20,7 +20,7 @@ if(NOT ANDROID AND NOT IOS)
     add_subdirectory(enttecwing)
     add_subdirectory(hid)
     add_subdirectory(os2l)
-if(UNIX AND NOT MACOS)
+if(UNIX AND NOT APPLE)
     add_subdirectory(dmx4linux)
 endif()
 if (NOT WIN32 AND NOT APPLE)
