cmake: improve library linking on macos

--- a/engine/audio/plugins/mad/CMakeLists.txt
+++ b/engine/audio/plugins/mad/CMakeLists.txt
@@ -23,7 +23,7 @@ target_include_directories(${module_name} PRIVATE
 target_link_libraries(${module_name} PRIVATE
     Qt${QT_MAJOR_VERSION}::Core
     Qt${QT_MAJOR_VERSION}::Gui
-    ${MAD_LIBRARIES}
+    ${MAD_LINK_LIBRARIES}
 )
 
 install(TARGETS ${module_name}
