--- a/engine/audio/src/CMakeLists.txt
+++ b/engine/audio/src/CMakeLists.txt
@@ -85,8 +85,12 @@ if((NOT ANDROID AND NOT IOS) AND (${FFTW3_FOUND}))
     target_compile_definitions(${module_name} PUBLIC
         HAS_FFTW3
     )
+
+    target_include_directories(${module_name} PUBLIC
+        ${FFTW3_INCLUDE_DIRS}
+    )
     target_link_libraries(${module_name} PUBLIC
-        ${FFTW3_LIBRARIES}
+        ${FFTW3_LINK_LIBRARIES}
     )
 endif()
 
